# ocrgrep

./: README.md  ocrgrep.py  pyproject.toml
