[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocrgrep"
version = "0.1.0"
description = "grep-like OCR tool for images and videos."
readme = "README.md"
authors = [
    { name = "tmctmt", email = "tmctmt@proton.me" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
keywords = ["ocr", "grep", "screen ai", "chrome", "locro"]
dependencies = [
    "tqdm ~= 4.0",
    "opencv-python ~= 4.0",
    "filetype ~= 1.0",
    "Pillow ~= 12.0"
]
[project.scripts]
ocrgrep = "ocrgrep:cli"